[package]
name = "substrate-validator-discovery"
version = "2.0.0"
authors = ["Parity Technologies <admin@parity.io>"]
edition = "2018"

[dependencies]
network = { package = "substrate-network", path = "../../core/network" }
sr-primitives = { path = "../../core/sr-primitives" }
primitives = { package = "substrate-primitives", path = "../primitives" }
client = { package = "substrate-client", path = "../../core/client" }
consensus_common_primitives = { package = "substrate-consensus-common-primitives", path = "../../core/consensus/common/primitives", default-features = false }
codec = { package = "parity-scale-codec", default-features = false, version = "1.0.3" }
futures = "0.1.17"
tokio-timer = "0.2"
keystore = { package = "substrate-keystore", path = "../../core/keystore" }
babe-primitives = { package = "substrate-consensus-babe-primitives", path = "../../core/consensus/babe/primitives", default-features = false }

[dev-dependencies]
